ui consistency across forum setting screens

--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -102,9 +102,15 @@
 					</ul>
 				</td>
 			</tr>
+			<tr>
+				<td colspan="5">
+					<ul class="button-switch">
+						<li><button type="submit" id="create-badge">Add Badge</button></li>
+					</ul>
+				</td>
+			</tr>
 		</tbody>
 	</table>
-	<button type="submit" id="create-badge">Add Badge</button>
 </article>
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
