--- a/apps/AdminComposite/Views/UserProfile/List.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/List.cshtml
@@ -125,10 +125,15 @@
 						</td>
 					</tr>
 				}
+				<tr>
+					<td colspan="6">
+						<ul class="button-switch">
+							<li><button type="button" id="invite-users">Invite Users</button></li>
+						</ul>
+					</td>
+				</tr>
 			</tbody>
 		</table>
-
-		<button type="button" id="invite-users">Invite Users</button>
 	</article>
 </div>
 
