--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -5,29 +5,32 @@
 
 	<section>
 		<form action="#">
-			<dl>
-				<dt><label for="theme-selector">Theme</label></dt>
-				<dd>
-					<select id="theme-selector">
-						<option>-- Default Theme --</option>
-						<option value="55555555-5555-5555-5555-555555555555">theme 1</option>
-						<option value="44444444-4444-4444-4444-444444444444">theme 2</option>
-					</select>
-				</dd>
+			<fieldset>
+				<legend>Theme Selection</legend>
+				<dl>
+					<dt><label for="theme-selector">Theme</label></dt>
+					<dd>
+						<select id="theme-selector">
+							<option>-- Default Theme --</option>
+							<option value="55555555-5555-5555-5555-555555555555">theme 1</option>
+							<option value="44444444-4444-4444-4444-444444444444">theme 2</option>
+						</select>
+					</dd>
 
-				<dt><label>Preview</label></dt>
-				<dd>
-					<div style="width: 250px; height: 200px; border: solid black 1px; background-color: #cccccc;">
-						<span style="font-style: italic; margin-left: 80px" id="unselected-preview">
-							<br /><br />
-							<br /><br />
-							<br />
-							preview image
-						</span>
-						<img id="theme-preview" alt="theme-preview" src="#" style="display: none"/>
-					</div>
-				</dd>
-			</dl>
+					<dt><label>Preview</label></dt>
+					<dd>
+						<div style="width: 250px; height: 200px; border: solid black 1px; background-color: #cccccc;">
+							<span style="font-style: italic; margin-left: 80px" id="unselected-preview">
+								<br /><br />
+								<br /><br />
+								<br />
+								preview image
+							</span>
+							<img id="theme-preview" alt="theme-preview" src="#" style="display: none"/>
+						</div>
+					</dd>
+				</dl>
+			</fieldset>
 			<button type="submit" id="save-theme">Save</button>
 		</form>
 	</section>
