--- a/apps/AdminComposite/Views/Authentication/_AnonymousUserNavigation.cshtml
+++ b/apps/AdminComposite/Views/Authentication/_AnonymousUserNavigation.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-	var controller = ViewContext.Controller.ValueProvider.GetValue("controller").RawValue.ToString();
-	var action = ViewContext.Controller.ValueProvider.GetValue("action").RawValue.ToString();
+	var controller = ViewContext.Controller.ValueProvider.GetValue("controller").RawValue.ToString().ToLower();
+	var action = ViewContext.Controller.ValueProvider.GetValue("action").RawValue.ToString().ToLower();
 }
 <script>
 	$(document).ready(function() {
@@ -9,21 +9,12 @@
 </script>
 <nav id="main-nav">
 	<ul>
-		<li class="current">
-		<li @if (controller == "Forum")
-				{
-					<text>class="current"</text>
-				}>
+		<li>
 			<a href="#" title="Actions" class="articles" id="action-link">Actions</a>
 			<ul style="display: block">
-				<li @if ((action == "List" && controller == "Forum") || action == "Details"){<text>class="current"</text>}>@Html.ActionLink("Sign up", "Create", "Authentication")</li>
-				<li @if ((action == "List" && controller == "Forum") || action == "Details"){<text>class="current"</text>}>@Html.ActionLink("Sign in", "Signin", "Authentication")</li>
-							<text>class="current"</text>
-						}>@Html.ActionLink("Sign up", "Create", "User")</li>
-				<li @if ((action == "List" && controller == "Forum") || action == "Details")
-						{
-							<text>class="current"</text>
-						}>@Html.ActionLink("Sign in", "Signin", "User")</li>
+				<li @if (action == "create" && controller == "authentication"){<text>class="current"</text>}>@Html.ActionLink("Sign up", "Create", "Authentication")</li>
+				<li @if (action == "signin" && controller == "authentication"){<text>class="current"</text>}>@Html.ActionLink("Sign in", "Signin", "Authentication")</li>
+				<li @if (action == "forgotpassword" && controller == "authentication"){<text>class="current"</text>}>@Html.ActionLink("Forgot Password", "ForgotPassword", "Authentication")</li>
 			</ul>
 		</li>
 	</ul>
