add buttons on table forms to tfoot element

--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -35,6 +35,15 @@
 				<th></th>
 			</tr>
 		</thead>
+		<tfoot>
+			<tr>
+				<td colspan="5">
+					<ul class="button-switch">
+						<li><button type="submit" id="create-badge">Add Badge</button></li>
+					</ul>
+				</td>
+			</tr>
+		</tfoot>
 		<tbody>
 			<tr>
 				<td><input type="checkbox"/></td>
@@ -99,13 +108,6 @@
 				<td>
 					<ul class="actions">
 						<li><a class="edit" rel="tooltip" href="#" original-title="Edit">Edit</a></li>
-					</ul>
-				</td>
-			</tr>
-			<tr>
-				<td colspan="5">
-					<ul class="button-switch">
-						<li><button type="submit" id="create-badge">Add Badge</button></li>
 					</ul>
 				</td>
 			</tr>
