--- a/apps/AdminComposite/Views/Organization/Users.cshtml
+++ b/apps/AdminComposite/Views/Organization/Users.cshtml
@@ -48,7 +48,15 @@
 				<th>&nbsp;</th>
 			</tr>
 		</thead>
-
+		<tfoot>
+			<tr>
+				<td colspan="4">
+					<ul class="button-switch">
+						<li><button type="button" id="add-user">Add User</button></li>
+					</ul>
+				</td>
+			</tr>
+		</tfoot>
 		<tbody>
 			@foreach (var user in Model)
 			{
@@ -70,13 +78,6 @@
 				</tr>
 			}
 		</tbody>
-		<tr>
-			<td colspan="4">
-				<ul class="button-switch">
-					<li><button type="button" id="add-user">Add User</button></li>
-				</ul>
-			</td>
-		</tr>
 	</table>
 </article>
 
