--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -50,9 +50,19 @@
 								<p>Forum url: <b><span id="forum-url">http//socialrally.com/{organization-name}/forums/{forum-name}</span></b></p>
 							</dd>
 
-							<dt><label>Description</label></dt>
+							<dt><label for="forum-description">Description</label></dt>
 							<dd>
 								@Html.TextAreaFor(m => m.Description, new { id = "forum-description", @class = "wysiwyg", @readonly = "readonly" })
+							</dd>
+
+							<dt class="checkbox"><label for="forum-private">Private</label></dt>
+							<dd>
+								@Html.CheckBoxFor(m=>m.Private, new {id="forum-private"})
+							</dd>
+
+							<dt class="checkbox"><label for="forum-moderated">Moderated</label></dt>
+							<dd>
+								@Html.CheckBoxFor(m => m.Moderated, new { id = "forum-moderated" })
 							</dd>
 						</dl>
 					</fieldset>
