--- a/apps/AdminComposite/Views/Moderation/Moderation.cshtml
+++ b/apps/AdminComposite/Views/Moderation/Moderation.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using ForumAgent.ReadModels
+@model ModeratedPosts
+@{
 	ViewBag.Title = "Moderate Posts & Comments";
 }
 
@@ -37,7 +39,7 @@
 		$("#select-moderation").change(function() {
 			var type = $(this).val();
 			if (type == "Posts") {
-				window.location.href = "@Url.Action("Posts", "Moderation", new { forumId = Request.QueryString["forumId"]})";
+				window.location.href = "@Url.Action("Posts", "Moderation", new { forumId = Request.QueryString["forumId"] })";
 			} else if (type == "Comments") {
 				window.location.href = "@Url.Action("Comments", "Moderation", new { forumId = Request.QueryString["forumId"] })";
 			}
@@ -45,48 +47,57 @@
 
 		$(".approve").click(function() {
 			var postId = $(this).attr("data-post-id");
-			
-			if ($(".moderation-item[data-post-id='" + postId  + "']").hasClass("moderator-removed")) {
+
+			if ($(".moderation-item[data-post-id='" + postId + "']").hasClass("moderator-removed")) {
 				$(".moderation-item[data-post-id='" + postId + "']").removeClass("moderator-removed");
 			}
-			
+
 			approveItem(postId);
 
-			$(".moderation-item.unread[data-post-id='" + postId  + "']").removeClass("unread").addClass("read");
+			$(".moderation-item.unread[data-post-id='" + postId + "']").removeClass("unread").addClass("read");
 			return false;
 		});
 
 		$(".reject").click(function() {
 			var postId = $(this).attr("data-post-id");
 
-			if ($(".moderation-item[data-post-id='" + postId  + "']").hasClass("moderator-approved")) {
+			if ($(".moderation-item[data-post-id='" + postId + "']").hasClass("moderator-approved")) {
 				$(".moderation-item[data-post-id='" + postId + "']").removeClass("moderator-approved");
 			}
-			
+
 			removeItem(postId);
 
-			$(".moderation-item[data-post-id='" + postId  + "']").removeClass("unread").addClass("read");
+			$(".moderation-item[data-post-id='" + postId + "']").removeClass("unread").addClass("read");
 			return false;
 		});
 	});
 
+	function blockUser(userId) {
+		$.ajax({
+				url: "@Url.Action("PerformBlockOperation", "UserProfile")",
+				type: "POST",
+				data: { userIdentifier: userId }
+			});
+	}
+
+
 	function removeItem(postId) {
-		// TODO: ajax call
+		$.get("@Url.Action("RejectPost")", { postId: postId });
 		console.log("removing item: " + postId);
 		updateItem(postId, "moderator-removed", "removed");
 	}
-	
+
 	function approveItem(postId) {
-		// TODO: ajax call
+		$.get("@Url.Action("ApprovePost")", { postId: postId });
 		console.log("approving item: " + postId);
 		updateItem(postId, "moderator-approved", "approved");
 	}
-	
+
 	function updateItem(postId, itemClass, text) {
 		$(".last-action[data-post-id='" + postId + "']").text(text);
 		$(".moderation-item[data-post-id='" + postId + "']").addClass(itemClass);
 	}
-	
+
 	function advanceSelection() {
 		$(".current-unread").removeClass("unread").removeClass("current-unread").addClass("read");
 
@@ -95,10 +106,10 @@
 
 	function ensureVisibility() {
 		if (!$(".current-unread").length) return;
-		
+
 		var top = parseInt($(".current-unread").position().top);
-		
-		if(!$(".current-unread:in-viewport").length) {
+
+		if (!$(".current-unread:in-viewport").length) {
 			console.log("off the screen");
 
 			$(window).scrollTop(top - 25);
@@ -119,9 +130,9 @@
 				<label for="select-moderation">Moderate</label>
 				<select id="select-moderation">
 					<option @if (ViewBag.ModerationType == "Post")
-							 {<text>selected="selected"</text>}>Posts</option>
+			 {<text>selected="selected"</text>}>Posts</option>
 					<option @if (ViewBag.ModerationType == "Comment")
-							 {<text>selected="selected"</text>}>Comments</option>
+			 {<text>selected="selected"</text>}>Comments</option>
 				</select>
 			</p>
 		</section>
@@ -130,43 +141,41 @@
 	<article>
 		<section>
 			<h3>Latest Activity</h3>
-				<ul class="logs">
-				@{ for (var i = 0; i < 15; i++)
-				   {
-		   			var postId = Guid.NewGuid();
-		   			var authorId = Guid.NewGuid();
-		   			<li class="moderation-item unread" data-post-id="@postId">
-						<div style="float:left;width:85%">
-							<span class="logs-timestamp">post date</span>
-							<h4>@ViewBag.ModerationType Title</h4>
-
-							<p>
-								Aliquam placerat posuere neque, at dignissim magna ullamcorper. The Dude abides.
-								In aliquam sagittis massa ac tortor ultrices faucibus. Nihilists! Jesus. Can we
-								just rent it from you? Curabitur eu mi sapien, ut ultricies ipsum morbi. I like
-								your style, Dude. Eget risus nulla nullam vel nisi enim, vel. Little Lebowski Urban
-								Achievers, yes, and proud we are of all of them. Auctor ante morbi id urna vel felis
-								lacinia.
-							</p>
-
-							<em class="logs-meta">posted by author-name</em>
-						</div>
-
-						<div style="float: left; margin-left: 25px;">
-							<a href="#" class="approve" data-post-id="@postId"><img src="@Url.Content("~/Content/thumb-up.png")" alt="approve" rel="tooltip" original-title="Approve this @ViewBag.ModerationType"/></a>
-							<br/>
-							<a href="#" class="reject" data-post-id="@postId"><img src="@Url.Content("~/Content/thumb-down.png")" alt="reject" rel="tooltip" original-title="Reject this @ViewBag.ModerationType"/></a>
-							<br/>
-							<a href="#" class="block-user confirmation-dialog" data-post-id="@postId" data-confirmation-message="Really Block Author?" data-confirm-function="blockUser" data-item-id="@authorId"><img src="@Url.Content("~/Content/chromatron/img/icons/icon_table_delete.png")" alt="block author" rel="tooltip" original-title="Block this author"/></a>
-							<br/>
-							<p style="margin-top: 25px" class="note last-action" data-post-id="@postId"></p>
-						</div>
-					</li>
-				   } 
+				@if (Model.TotalPosts == 0)
+				{
+					<p>There are no posts to review</p>
 				}
-			</ul>
-		</section>
+				else
+				{
+					<ul class="logs">
+						@foreach (var post in Model.Posts)
+						{
+		   					<li class="moderation-item unread" data-post-id="@post.Identifier">
+								<div style="float:left;width:85%">
+									<span class="logs-timestamp">@post.Created</span>
+									<h4>@post.Title</h4>
 
+									<p>
+										@post.Body
+									</p>
+
+									<em class="logs-meta">posted by @post.AuthorDisplayName</em>
+								</div>
+
+								<div style="float: left; margin-left: 25px;">
+									<a href="#" class="approve" data-post-id="@post.Identifier"><img src="@Url.Content("~/Content/thumb-up.png")" alt="approve" rel="tooltip" original-title="Approve this @ViewBag.ModerationType"/></a>
+									<br/>
+									<a href="#" class="reject" data-post-id="@post.Identifier"><img src="@Url.Content("~/Content/thumb-down.png")" alt="reject" rel="tooltip" original-title="Reject this @ViewBag.ModerationType"/></a>
+									<br/>
+									<a href="#" class="block-user confirmation-dialog" data-confirmation-message="Really Block @post.AuthorDisplayName?" data-confirm-function="blockUser" data-item-id="@post.AuthorIdentifier"><img src="@Url.Content("~/Content/chromatron/img/icons/icon_table_delete.png")" alt="block author" rel="tooltip" original-title="Block this author"/></a>
+									<br/>
+									<p style="margin-top: 25px" class="note last-action" data-post-id="@post.Identifier"></p>
+								</div>
+							</li>
+						} 
+					</ul>
+				}
+		</section>
 	</article>
 </div>
 
