--- a/apps/AdminComposite/Views/Forum/Details.cshtml
+++ b/apps/AdminComposite/Views/Forum/Details.cshtml
@@ -31,6 +31,7 @@
 				@using (Html.BeginFormForInputModel(Model, true, Url.Action("Details", "Forum", new {forumId = Model.ForumIdentifier})))
 				{
 					@Html.HiddenFor(m => m.ForumIdentifier);
+					@Html.Hidden("orgSlug", (object)ViewBag.OrganizationSlug, null)
 					<fieldset>
 						<legend>Forum Details</legend>
 						
@@ -40,14 +41,14 @@
 
 							<dt><label for="forum-slug">Slug</label></dt>
 							<dd>
-								@Html.TextBoxFor(m=>m.UrlSlug, new {id="forum-slug"})
+								@Html.TextBoxFor(m => m.UrlSlug, new { id = "forum-slug" })
 								<p><a href="#" id="generate-slug">generate slug</a></p>
 							</dd>
 
 							<dt><label for="forum-host">Host</label></dt>
 							<dd>
-								@Html.TextBoxFor(m => m.UrlHostName, new { id = "forum-host", @readonly = "readonly" })
-								<p>Forum url: <b><span id="forum-url">http//socialrally.com/{organization-name}/forums/{forum-name}</span></b></p>
+								@Html.TextBoxFor(m => m.UrlHostName, new { id = "forum-host" })
+								<p>Forum url: <b><span id="forum-url">@Model.UrlHostName/org/@ViewBag.OrganizationSlug/forum/@Model.UrlSlug</span></b></p>
 							</dd>
 
 							<dt><label for="forum-description">Description</label></dt>
@@ -57,7 +58,7 @@
 
 							<dt class="checkbox"><label for="forum-private">Private</label></dt>
 							<dd>
-								@Html.CheckBoxFor(m=>m.Private, new {id="forum-private"})
+								@Html.CheckBoxFor(m => m.Private, new { id = "forum-private" })
 							</dd>
 
 							<dt class="checkbox"><label for="forum-moderated">Moderated</label></dt>
@@ -119,7 +120,7 @@
 						</dl>
 						
 						@{
-							var forumUrl = string.Format("http//{0}/{1}/forums/{2}", Model.UrlHostName, @ViewBag.OrganizationSlug, @Model.UrlSlug);
+							var forumUrl = string.Format("{0}/org/{1}/forum/{2}", Model.UrlHostName, @ViewBag.OrganizationSlug, @Model.UrlSlug);
 						}
 						<p class="notification information"><a href="@forumUrl" title="forum-url">@forumUrl</a></p>
 					</fieldset>
