--- a/apps/ForumComposite/Views/Shared/Categories.cshtml
+++ b/apps/ForumComposite/Views/Shared/Categories.cshtml
@@ -1,9 +1,8 @@
 ﻿<h4><a href="#/all">Categories</a></h4>
 <ul class="PanelInfo PanelCategories">
-	<li class="Depth1"><span><strong><a href="#discussions">All Discussions</a></strong><span class="Count">55</span></span></li>
-	<li class="Depth1"><strong><a href="#general">Top Level</a></strong><span class="Count">27</span></li>
-	<li class="Depth2"><strong><a href="#illustration">›&nbsp;&nbsp;Nested Category</a></strong><span class="Count">2</span></li>
-	<li class="Active"><strong><a href="#general">Top Level</a></strong><span class="Count">27</span></li>
-	<li class="Depth1"><strong><a href="#general">Top Level</a></strong><span class="Count">27</span></li>
-	<li class="Depth2"><strong><a href="#illustration">›&nbsp;&nbsp;Nested Category</a></strong><span class="Count">2</span></li>
+	<li class="Active"><span><strong><a href="#discussions">All Discussions</a></strong><span class="Count">55</span></span></li>
+	@foreach (var category in ViewBag.Categories)
+	{
+	<li class="Depth1"><strong><a href="#general">@category.Name</a></strong><span class="Count">27</span></li>
+	}
 </ul>
