--- a/apps/ForumComposite/Views/Post/ByCategory.cshtml
+++ b/apps/ForumComposite/Views/Post/ByCategory.cshtml
@@ -1,10 +1,10 @@
 ﻿@using ForumAgent.ReadModels
 @model PostListing
 @{
-	ViewBag.Title = "Forum Home";
+	ViewBag.Title = "Forum Category";
 }
 <p class="Box BoxCategories">
-<h4>@ViewBag.ForumName</h4>
+<h4><a href="#">@ViewBag.ForumName</a>: Forum Category</h4>
 </p>
 <ul class="DataList Discussions">
 	<!--<li class="Item Alt  Announcement">
