--- a/apps/AdminComposite/Views/Category/_NewCategory.cshtml
+++ b/apps/AdminComposite/Views/Category/_NewCategory.cshtml
@@ -1,10 +1,9 @@
 ﻿@using AdminComposite.Models
 @using Euclid.Composites.Mvc.Extensions
 @model CreateCategoryInputModel
-
 <section>
 	@using (Html.BeginFormForInputModel(Model))
-	{
+ {
 		@Html.HiddenFor(m => m.ForumIdentifier);
 		@Html.HiddenFor(m => m.CreatedBy);
 		<fieldset>
@@ -12,12 +11,15 @@
 		
 			<dl>
 				<dt><label for="category-name">Name</label></dt>
-				<dd>@Html.TextBoxFor(m=>m.Name, new {id="category-name"})</dd>
+				<dd>@Html.TextBoxFor(m => m.Name, new { id = "category-name" })</dd>
+
+				<dt><label for="category-name">Slug</label></dt>
+				<dd>@Html.TextBoxFor(m => m.Slug, new { id = "category-slug" })</dd>
 
 				<dt class="checkbox"><label for="category-active">Active</label></dt>
 				<dd>@Html.CheckBoxFor(m => m.Active, new { id = "category-active" })</dd>
 			</dl>
 		</fieldset>
 		<button type="submit">Save</button>
-	}
+ }
 </section>
