forum is now aware of themes configured in the admin

--- a/apps/ForumComposite/Views/Shared/_Layout.cshtml
+++ b/apps/ForumComposite/Views/Shared/_Layout.cshtml
@@ -2,9 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-ca">
 	<head>
 		<title>@ViewBag.Title</title>
-		<link rel="stylesheet" type="text/css" href="/Content/themes/swiss/style.css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="/Content/themes/swiss/custom.css" media="screen" />
-		<link rel="shortcut icon" href="/Content/themes/swiss/favicon.png" type="image/x-icon" />
+		<link rel="stylesheet" type="text/css" href="/Content/themes/@ViewBag.ForumTheme/style.css" media="screen" />
+		<link rel="stylesheet" type="text/css" href="/Content/themes/@ViewBag.ForumTheme/custom.css" media="screen" />
+		<link rel="shortcut icon" href="/Content/themes/@ViewBag.ForumTheme/favicon.png" type="image/x-icon" />
 		<link rel="stylesheet" href="http://jqueryui.com/themes/base/jquery.ui.all.css"/>
 		<script src="@Url.Content("~/Scripts/jquery-1.6.2.min.js")" type="text/javascript"> </script>
 		<script src="http://jqueryui.com/ui/jquery.ui.core.js" type="text/javascript"> </script>
