--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
 		
 			<section role="navigation">
 				<header>
-					<h1>Create and manage custom forums</h1>
+					@Html.ActionLink("NewCo Admin Home", "Index", "Dashboard")
 				</header>
 
 				@if (IsSectionDefined("LeftRail"))
