wired up themes ui, add correct breadcrumbs

--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -97,6 +97,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
+		<li>@ViewBag.ForumName</li>
 		<li>Categories</li>
 	</ul>
 }
