--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -119,6 +119,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
+		<li>@ViewBag.ForumName</li>
 		<li>Custom Content</li>
 	</ul>
 }
