--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -66,6 +66,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
+		<li>@ViewBag.ForumName</li>
 		<li>Authentication Providers</li>
 	</ul>
 }
