--- a/apps/AdminComposite/Views/Moderation/Items.cshtml
+++ b/apps/AdminComposite/Views/Moderation/Items.cshtml
@@ -133,7 +133,7 @@
 
 	<article>
 		<section>
-			<p>Approve and reject @ViewBag.ItemType</p>
+			<p>Press the down arrow to approve and the 'R' key to reject @ViewBag.ItemType</p>
 		</section>
 	</article>
 
@@ -175,6 +175,7 @@
 @section Breadcrumbs {
 	<ul id="breadcrumbs">
 		<li><a href="/" title="Back to Homepage">Home</a></li>
+		<li>@ViewBag.ForumName</li>
 		<li>@ViewBag.Title</li>
 	</ul>
 }
