--- a/apps/AdminComposite/Views/VotingScheme/List.cshtml
+++ b/apps/AdminComposite/Views/VotingScheme/List.cshtml
@@ -57,6 +57,7 @@
 @section Breadcrumbs{
 	<ul id="breadcrumbs">
 		<li>@Html.ActionLink("Home", "Index", "Dashboard")</li>
+		<li>@ViewBag.FormName</li>
 		<li>Voting</li>
 	</ul>
 }
