--- a/apps/AdminComposite/Views/Badge/List.cshtml
+++ b/apps/AdminComposite/Views/Badge/List.cshtml
@@ -24,7 +24,11 @@
 		<h2>Manage Forum Badges</h2>
 	</header>
 
-	<p>Setting a forum to active means it will be awarded to users when the trigger threshold is satisfied.</p>
+	<section>
+		<p style="float: left">Setting a forum to active means it will be awarded to users when the trigger threshold is satisfied.</p>
+		<a href="#" style="float:right" class="button-link blue" id="create-badge">Add Badge</a>
+	</section>
+
 	<table>
 		<thead>
 			<tr>
@@ -39,7 +43,7 @@
 			<tr>
 				<td colspan="5">
 					<ul class="button-switch">
-						<li><button type="submit" id="create-badge">Add Badge</button></li>
+						<li><button type="submit" id="save">Save</button></li>
 					</ul>
 				</td>
 			</tr>
