--- a/apps/AdminComposite/Views/Category/List.cshtml
+++ b/apps/AdminComposite/Views/Category/List.cshtml
@@ -56,7 +56,12 @@
 	<header>
 		<h2>Manage Forum Categories</h2>
 	</header>
-	<p>View, edit, activate and create categories for this forum</p>
+
+	<section>
+		<p style="float:left">View, edit, activate and create categories for this forum</p>
+		<a href="#" style="float:right" class="button-link blue" id="create-category">New Category</a>
+	</section>
+	
 	<table id="category-table">
 		<thead>
 			<tr>
@@ -70,7 +75,6 @@
 			<tr>
 				<td colspan="4">
 					<ul class="button-switch">
-						<li><button type="button" id="create-category">New Category</button></li>
 						<li><button type="button" id="update">Save</button></li>
 					</ul>
 				</td>
