--- a/apps/AdminComposite/Views/Content/List.cshtml
+++ b/apps/AdminComposite/Views/Content/List.cshtml
@@ -75,8 +75,11 @@
 	<header>
 		<h2>Content for Forum</h2>
 	</header>
-	
-	<p>Manage content for this forum</p>
+
+	<section>
+		<p style="float:left">Manage content for this forum</p>
+		<a style="float:right" href="#" class="button-link blue" id="add-content">Add Content</a>
+	</section>
 
 	<table>
 		<thead>
@@ -91,7 +94,6 @@
 			<tr>
 				<td colspan="4">
 					<ul class="button-switch">
-						<li><button type="button" id="add-content">Add Content</button></li>
 						<li><button type="button" id="update">Save</button></li>
 					</ul>
 				</td>
