--- a/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
+++ b/apps/AdminComposite/Views/Forum/AuthenticationProviders.cshtml
@@ -14,18 +14,18 @@
 				<th>Name</th>
 			</tr>
 		</thead>
+		<tfoot>
+			<td colspan="2">
+				<ul class="button-switch">
+					<li><button type="button">Save</button></li>
+				</ul>
+			</td>
+		</tfoot>
 		<tbody>
 			<tr>
 				<td>
 					<input type="checkbox" checked="checked" disabled="disabled" /></td>
 				<td>Built-in</td>
-			</tr>
-			<tr>
-				<td colspan="2">
-					<ul class="button-switch">
-						<li><button type="button">Save</button></li>
-					</ul>
-				</td>
 			</tr>
 			@*<tr>
 				<td>
