--- a/apps/AdminComposite/Views/UserProfile/List.cshtml
+++ b/apps/AdminComposite/Views/UserProfile/List.cshtml
@@ -90,7 +90,12 @@
 		<header>
 			<h2>@ViewBag.Title</h2>
 		</header>
-		<p>Manage and Invite users to this forum</p>
+
+		<section>
+			<p style="float:left">Manage and Invite users to this forum</p>
+			<a href="#" style="float:right" class="button-link blue" id="invite-users">Invite Users</a>
+		</section>
+		
 		<table>
 			<thead>
 				<tr>
@@ -106,7 +111,7 @@
 				<tr>
 					<td colspan="6">
 						<ul class="button-switch">
-							<li><button type="button" id="invite-users">Invite Users</button></li>
+							<li></li>
 						</ul>
 					</td>
 				</tr>
