--- a/apps/AdminComposite/Views/VotingScheme/List.cshtml
+++ b/apps/AdminComposite/Views/VotingScheme/List.cshtml
@@ -28,6 +28,15 @@
 				<th>Description</th>
 			</tr>
 		</thead>
+		<tfoot>
+			<tr>
+				<td colspan="3">
+					<ul class="button-switch">
+						<li><button type="button" id="save-voting-scheme">Save</button></li>
+					</ul>
+				</td>
+			</tr>
+		</tfoot>
 		<tbody>
 			<tr>
 				<td>
@@ -42,13 +51,6 @@
 				</td>
 				<td>Up / Down</td>
 				<td>Users can vote a post or comment up or down.  <br />A user can change their vote, but can only vote on a particular post or comment once</td>
-			</tr>
-			<tr>
-				<td colspan="3">
-					<ul class="button-switch">
-						<li><button type="button" id="save-voting-scheme">Save</button></li>
-					</ul>
-				</td>
 			</tr>
 		</tbody>
 	</table>
