--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -12,8 +12,9 @@
 		
 		$("#edit-theme").click(function () {
 			$(this).attr("disabled", "disabled", "disabled");
-			$("#save-theme").removeAttr("disabled", "disabled");
-			$("#theme-selector").removeAttr("disabled", "disabled");
+			$("#save-theme").removeAttr("disabled");
+			$("#theme-selector").removeAttr("disabled");
+			$("#cancel-edit").removeAttr("disabled");
 		});
 
 		$("#save-theme").click(function () {
@@ -25,13 +26,18 @@
 				$(item).text($(item).attr("data-original-text"));
 			});
 			
+			$("#theme-selector option:selected").text(selectedThemeText);
+			
 			$("#save-theme").attr("disabled", "disabled");
 			$("#theme-selector").attr("disabled", "disabled");
-			$("#theme-selector option:selected").text(selectedThemeText);
-			$("#edit-theme").removeAttr("disabled", "disabled");
+			$("#cancel-edit").attr("disabled", "disabled");
+			$("#edit-theme").removeAttr("disabled");
+		});
+
+		$("#cancel-edit").click(function() {
+			window.location.reload();
 		});
 	});
-
 </script>
 <article>
 	<header>
@@ -60,8 +66,10 @@
 			</dd>
 		</dl>
 	</fieldset>
-	<button type="button" id="edit-theme">Edit</button>&nbsp;
-	<button type="button" disabled="disabled" id="save-theme">Save</button>
+
+	<button type="button" id="edit-theme">Edit</button>
+	<button type="button" disabled="disabled" class="green" id="save-theme">Save</button>
+	<button type="button" disabled="disabled" id="cancel-edit">Cancel</button>
 	</form>
 </article>
 @section Breadcrumbs{
